@@ -12,13 +12,17 @@ import com.mfvanek.caching.models.Movie;
 import com.mfvanek.caching.models.Movies;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 abstract class BaseLFUCacheTest extends BaseCacheTest {
 
@@ -77,7 +81,7 @@ abstract class BaseLFUCacheTest extends BaseCacheTest {
         evictedItems = cache.put(INCEPTION);
         assertEquals(1, cache.size());
         assertEquals(2, evictedItems.size());
-        assertIterableEquals(Arrays.asList(SNOWDEN, AQUAMAN), evictedItems);
+        assertIterableEquals(List.of(SNOWDEN, AQUAMAN), evictedItems);
         assertTrue(cache.containsKey(Movies.INCEPTION_IMDB));
         assertEquals(0, countable.frequencyOf(Movies.INCEPTION_IMDB));
     }
@@ -130,7 +134,7 @@ abstract class BaseLFUCacheTest extends BaseCacheTest {
         assertEquals(2, countable.frequencyOf(Movies.SNOWDEN_IMDB));
         assertEquals(1, countable.frequencyOf(Movies.INCEPTION_IMDB));
 
-        List<Movie> evictedItems = cache.put(AQUAMAN);
+        final List<Movie> evictedItems = cache.put(AQUAMAN);
         assertEquals(2, cache.size());
         assertEquals(2, countable.frequencyOf(Movies.SNOWDEN_IMDB));
         assertEquals(0, countable.frequencyOf(Movies.AQUAMAN_IMDB));
